
This file shows the changes in recent releases of TinyMCE for MODx. The most current release is usually the 
development release, and is only shown to give an idea of what's currently in the pipeline.

TinyMCE 4.0.0
====================================
- Fixed bug with language being ignored
- Fixed bug with TVs on non-document panels as TVs
- Fixed bug where TinyMCE was ignoring save syncing
- Adjusted rte loading logic to properly load right data for TV rtes
- Fixed bug with mce tags being added in, cleanup setting now defaults to true
- Added modxlink tinymce plugin to add searchability to link popup
- Fixed bug where css_selectors setting wasnt working
- Added resolver to auto-set which_editor to TinyMCE and use_editor to 1 when installing
- Added svn props to changelog

TinyMCE 3.2.7.0 (LastChangedRevision: 581, LastChangedDate: 2009-11-06 08:20:21 -0600 (Fri, 06 Nov 2009))
====================================
- Optimized lexicon to work with Revo RC-2
- Adjusted resolver code to work with Revo RC2
- [#TINYMCE-52] Added skin and skin_variant properties for TinyMCE; also set the default to the silver o2k7 theme
- [#TINYMCE-53] Added tiny.custom_buttons5 setting for 5th row of buttons options
- [#TINYMCE-54] Added table_inline_editing property
- Removed deprecated assets docs dir
- [#TINYMCE-42], [#TINYMCE-38], [#TINYMCE-46], [#TINYMCE-43], [#TINYMCE-29], [#TINYMCE-6], [#TINYMCE-47] Fixed bugs with saving not syncing, bugs where RTE would not reload in TVs when 'Reload' was clicked, image path bugs, other bugs
- Fixed bug with toggle not found in SVN
- Fixed various bugs
- Fixed bug with css style selectors
- Changed integrations to work in Revo-beta5.
- Added hook for OnRichTextBrowserInit to allow for proper integrations into MODx.Browser
- Added hook for OnBeforeManagerPageInit to properly register TinyMCE JS and Ext-derived object before page load; this allows using the 'tinymce' xtype in ExtJS forms

====================================