@@ -96,3 +96,9 @@ MODx.afterTVLoad = function() {
 MODx.unloadTVRTE = function() {
     Tiny.onTVUnload();
 };
+
+var tinyMCETemplateList = [
+	// Name, URL, Description
+	["Simple snippet", "templates/snippet1.htm", "Simple HTML snippet."],
+	["Layout", "templates/layout1.htm", "HTML Layout."]
+];
