@@ -1,26 +1,24 @@
 <?php
-/*
- * Filename:       assets/plugins/tinymce/lang/english.inc.php
- * Function:       English language file for TinyMCE
- * Encoding:       ISO-Latin-1
- * Author:         Jeff Whitfield
- * Date:           2007/01/06
- * Version:        2.0.9
- * MODx version:   0.9.7
-*/
-$_lang['tinymce_editor_theme_title'] = 'Theme:';
-$_lang['tinymce_editor_theme_message'] = 'Here you can select which theme or skin to use with the editor.';
-$_lang['tinymce_editor_custom_plugins_title'] = 'Custom Plugins:';
-$_lang['tinymce_editor_custom_plugins_message'] = 'Enter the plugins to use for the "custom" theme as a comma separated list.';
-$_lang['tinymce_editor_custom_buttons_title'] = 'Custom Buttons:';
-$_lang['tinymce_editor_custom_buttons_message'] = 'Enter the buttons to use for the "custom" theme as a comma separated list for each row. Be sure that each button has the required plugin enabled in the "Custom Plugins" setting.';
-$_lang['tinymce_editor_css_selectors_title'] = 'CSS selectors:';
-$_lang['tinymce_editor_css_selectors_message'] = 'Here you can enter a list of selectors that should be available in the editor. Enter them as follows:<br />"displayName=selectorName;displayName2=selectorName2"<br />For instance, say you have <b>.mono</b> and <b>.smallText</b> selectors in your CSS file, you could add them here as:<br />"Monospaced text=mono;Small text=smallText"<br />Note that the last entry should not have a semi-colon after it.';
-$_lang['tinymce_settings'] = 'TinyMCE Settings';
-$_lang['tinymce_theme_simple'] = 'Simple';
-$_lang['tinymce_theme_advanced'] = 'Advanced';
-$_lang['tinymce_theme_editor'] = 'Content Editor';
-$_lang['tinymce_theme_custom'] = 'Custom';
-
-
-
+/**
+ * Default TinyMCE language file
+ * 
+ * @package tinymce
+ * @language en
+ */
+$_lang['setting_tiny.css_selectors'] = 'CSS Selectors';
+$_lang['setting_tiny.css_selectors_desc'] = 'Here you can enter a list of selectors that should be available in the editor. Enter them as follows:<br />"displayName=selectorName;displayName2=selectorName2"<br />For instance, say you have <b>.mono</b> and <b>.smallText</b> selectors in your CSS file, you could add them here as:<br />"Monospaced text=mono;Small text=smallText"<br />Note that the last entry should not have a semi-colon after it.';
+$_lang['setting_tiny.custom_buttons1'] = 'Custom Buttons Row 1';
+$_lang['setting_tiny.custom_buttons1_desc'] = 'Enter the buttons to use as a comma separated list for the first row. Be sure that each button has the required plugin enabled in the "Custom Plugins" setting.';
+$_lang['setting_tiny.custom_buttons2'] = 'Custom Buttons Row 2';
+$_lang['setting_tiny.custom_buttons2_desc'] = 'Enter the buttons to use as a comma separated list for the second row. Be sure that each button has the required plugin enabled in the "Custom Plugins" setting.';
+$_lang['setting_tiny.custom_buttons3'] = 'Custom Buttons Row 3';
+$_lang['setting_tiny.custom_buttons3_desc'] = 'Enter the buttons to use as a comma separated list for the third row. Be sure that each button has the required plugin enabled in the "Custom Plugins" setting.';
+$_lang['setting_tiny.custom_buttons4'] = 'Custom Buttons Row 4';
+$_lang['setting_tiny.custom_buttons4_desc'] = 'Enter the buttons to use as a comma separated list for the fourth row. Be sure that each button has the required plugin enabled in the "Custom Plugins" setting.';
+$_lang['setting_tiny.custom_buttons5'] = 'Custom Buttons Row 5';
+$_lang['setting_tiny.custom_buttons5_desc'] = 'Enter the buttons to use as a comma separated list for the fifth row. Be sure that each button has the required plugin enabled in the "Custom Plugins" setting.';
+$_lang['setting_tiny.custom_plugins'] = 'Custom Plugins';
+$_lang['setting_tiny.custom_plugins_desc'] = 'A comma-separated list of TinyMCE plugins to use.';
+$_lang['setting_tiny.editor_theme'] = 'Editor Theme';
+$_lang['setting_tiny.template_list'] = 'Template List';
+$_lang['setting_tiny.template_list_desc'] = 'Specify a list of templates for the template plugin. They must be comma-separated, and then have the format name:URL:description. For example, MyTemp:assets/templates/mytemp.html:My very own template';
