@@ -4,6 +4,10 @@ development release, and is only shown to give an idea of what's currently in th
 
 TinyMCE 4.0.0
 ====================================
+- Added lexicon support for tiny system settings
+- Added support for template plugin, can now use tiny.template_list setting
+- Fixed bug with editor theme
+- Added language strings for dialogs
 - Fixed bug with language being ignored
 - Fixed bug with TVs on non-document panels as TVs
 - Fixed bug where TinyMCE was ignoring save syncing
